<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<variable
			name="vm"
			type="pl.org.akai.hackathon.ui.cloth.ClothListViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/sortLayout"
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="16dp"
			android:hint="@string/sort_by"
			app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
			app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
			app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
			app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
			app:layout_constraintBottom_toTopOf="@id/unused_chip"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<com.google.android.material.textfield.MaterialAutoCompleteTextView
				android:id="@+id/sort"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="none"
				app:simpleItems="@array/sort" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.chip.Chip
			android:id="@+id/unused_chip"
			style="@style/Widget.Material3.Chip.Filter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="@{vm.query.unused}"
			android:text="@string/unused"
			app:layout_constraintBottom_toTopOf="@id/frame"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/sortLayout" />

		<FrameLayout
			android:id="@+id/frame"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/unused_chip">

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/list"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:isVisible="@{vm.isLoaded()}" />

			<ProgressBar
				android:id="@+id/progressBar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:isVisible="@{vm.isLoading()}" />

			<LinearLayout
				android:id="@+id/errorLayout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:isVisible="@{vm.isError()}"
				android:orientation="vertical">

				<com.mikepenz.iconics.view.IconicsImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					app:iiv_color="?android:textColorPrimary"
					app:iiv_icon="cmd-cloud-off-outline"
					app:iiv_size="64dp" />

				<Button
					style="@style/Widget.Material3.Button.OutlinedButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="24dp"
					android:onClick="@{() -> vm.refresh()}"
					android:text="@string/try_again" />
			</LinearLayout>
		</FrameLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
