<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<variable
			name="vm"
			type="pl.org.akai.hackathon.ui.add.AddViewModel" />

		<variable
			name="model"
			type="pl.org.akai.hackathon.data.model.ClothCreate" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.add.AddFragment">

		<TextView
			android:id="@+id/addHeader"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:text="@string/add_cloth"
			android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
			android:textColor="?attr/colorPrimary"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<com.google.android.material.imageview.ShapeableImageView
			android:id="@+id/imageView"
			android:layout_margin="20dp"
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:scaleType="centerCrop"
			app:shapeAppearanceOverlay="@style/circleImageView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/addHeader"
			app:srcCompat="@drawable/photo" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="32dp"
			android:hint="@string/name_of_cloth"
			app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
			app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
			app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
			app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
			app:helperText="np. Bluza Gucci lub Spodnie Jeans"
			app:helperTextEnabled="true"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/imageView">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@={model.name}" />

		</com.google.android.material.textfield.TextInputLayout>


		<com.google.android.material.textfield.TextInputLayout
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/categoryLayout"
			android:layout_marginTop="16dp"
			android:layout_marginHorizontal="16dp"
			app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
			app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
			app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
			app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/name"
			android:hint="@string/category">

			<com.google.android.material.textfield.MaterialAutoCompleteTextView
				android:id="@+id/category"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="none"
				app:simpleItems="@{vm.list}" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:enabled="false"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/categoryLayout"
			android:text="@string/add_cloth" />

		<TextView
			android:id="@+id/url"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"
			tools:ignore="MissingConstraints" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>